.tox/py27/log/py27-64.log
actionid=py27
msg=installpkg
cmdargs=[local('/home/gammasq/Documents/projects/storycheck/.tox/py27/bin/pip'), 'install', '--pre', '/home/gammasq/Documents/projects/storycheck/.tox/dist/storycheck-0.1.zip', '-U', '--no-deps']
env={'SSH_ASKPASS': '/usr/bin/ksshaskpass', 'PYTHONIOENCODING': 'utf_8', 'KDE_IS_PRELINKED': '1', 'rvm_version': '1.22.9 (stable)', 'rvm_path': '/home/gammasq/.rvm', 'WINDOWPATH': '1', 'LESSOPEN': '||/usr/bin/lesspipe.sh %s', 'RUBY_VERSION': 'ruby-2.0.0-p247', 'LOGNAME': 'gammasq', 'USER': 'gammasq', 'PATH': '/home/gammasq/Documents/projects/storycheck/.tox/py27/bin:/home/gammasq/Documents/projects/storycheck/venv/bin:/home/gammasq/.rvm/gems/ruby-2.0.0-p247@railstutorial_rails_4_0/bin:/home/gammasq/.rvm/gems/ruby-2.0.0-p247@global/bin:/home/gammasq/.rvm/rubies/ruby-2.0.0-p247/bin:/home/gammasq/.rvm/bin:/usr/local/bin:/usr/bin:/bin:/usr/games:/usr/local/sbin:/usr/sbin:/home/gammasq/.local/bin:/home/gammasq/bin:/home/gammasq/.rvm/bin', 'XDG_VTNR': '1', 'DM_CONTROL': '/var/run/xdmctl', 'PS1': '(venv)[\\u@\\h \\W]\\$ ', 'KDE_SESSION_VERSION': '4', 'SSH_AGENT_PID': '1166', 'LANG': 'en_GB.UTF-8', 'PROFILEHOME': '', 'TERM': 'xterm-256color', 'SHELL': '/bin/bash', 'COLORFGBG': '15;0', 'XAUTHORITY': '/tmp/kde-gammasq/xauth-1000-_0', 'LANGUAGE': '', 'SESSION_MANAGER': 'local/unix:@/tmp/.ICE-unix/1265,unix/unix:/tmp/.ICE-unix/1265', 'SHLVL': '3', 'GS_LIB': '', 'KONSOLE_PROFILE_NAME': 'Shell', 'SHELL_SESSION_ID': '67a78568e1e94000a5a43076ccee70cb', 'HISTSIZE': '1000', 'KONSOLE_DBUS_WINDOW': '/Windows/1', 'WINDOWID': '60817434', '_system_arch': 'x86_64', 'rvm_env_string': 'ruby-2.0.0-p247@railstutorial_rails_4_0', 'QT_PLUGIN_PATH': '/usr/lib64/kde4/plugins:/usr/lib/kde4/plugins:/home/gammasq/.kde/lib64/kde4/plugins/:/usr/lib64/kde4/plugins/', '__rvm_date': '() {  \\date "$@" || return $?\n}', 'rvm_ruby_string': 'ruby-2.0.0-p247', 'HOME': '/home/gammasq', 'KONSOLE_DBUS_SESSION': '/Sessions/1', 'rvm_bin_path': '/home/gammasq/.rvm/bin', 'SSH_AUTH_SOCK': '/tmp/ssh-DXXvG1kIZBVX/agent.1093', 'KDE_MULTIHEAD': 'false', 'XDG_RUNTIME_DIR': '/run/user/1000', 'rvm_prefix': '/home/gammasq', 'KONSOLE_DBUS_SERVICE': ':1.48', 'KDE_SESSION_UID': '1000', 'XDM_MANAGED': 'method=classic', 'IRBRC': '/home/gammasq/.rvm/rubies/ruby-2.0.0-p247/.irbrc', '_system_type': 'Linux', 'MY_RUBY_HOME': '/home/gammasq/.rvm/rubies/ruby-2.0.0-p247', 'GTK2_RC_FILES': '/etc/gtk-2.0/gtkrc:/home/gammasq/.gtkrc-2.0:/home/gammasq/.gtkrc-2.0-kde4:/home/gammasq/.kde/share/config/gtkrc-2.0', 'XDG_MENU_PREFIX': 'kde4-', 'QT_GRAPHICSSYSTEM_CHECKED': '1', 'XDG_CURRENT_DESKTOP': 'KDE', 'XDG_SESSION_ID': '1', 'DBUS_SESSION_BUS_ADDRESS': 'unix:abstract=/tmp/dbus-2fjfFCYdSe,guid=d20e9e8a79c63963cfc56d0e52441f2a', '_': '/home/gammasq/Documents/projects/storycheck/venv/bin/tox', 'KDEDIRS': '/usr', 'DESKTOP_SESSION': 'default', 'VIRTUAL_ENV': '/home/gammasq/Documents/projects/storycheck/venv', 'DISPLAY': ':0', 'GTK_RC_FILES': '/etc/gtk/gtkrc:/home/gammasq/.gtkrc:/home/gammasq/.kde/share/config/gtkrc', 'XCURSOR_THEME': 'Adwaita', 'OLDPWD': '/home/gammasq/Documents/projects/rails_projects/sample_app', 'HOSTNAME': 'localhost.localdomain', 'GEM_PATH': '/home/gammasq/.rvm/gems/ruby-2.0.0-p247@railstutorial_rails_4_0:/home/gammasq/.rvm/gems/ruby-2.0.0-p247@global', 'HISTCONTROL': 'ignoredups', 'XDG_DATA_DIRS': '/usr/share:/usr/share/kde-settings/kde-profile/default/share:/usr/local/share:/usr/share', '_system_name': 'Fedora', 'PWD': '/home/gammasq/Documents/projects/storycheck', '_system_version': '19', 'KDE_FULL_SESSION': 'true', 'MAIL': '/var/spool/mail/gammasq', 'LS_COLORS': 'rs=0:di=38;5;27:ln=38;5;51:mh=44;38;5;15:pi=40;38;5;11:so=38;5;13:do=38;5;5:bd=48;5;232;38;5;11:cd=48;5;232;38;5;3:or=48;5;232;38;5;9:mi=05;48;5;232;38;5;15:su=48;5;196;38;5;15:sg=48;5;11;38;5;16:ca=48;5;196;38;5;226:tw=48;5;10;38;5;16:ow=48;5;10;38;5;21:st=48;5;21;38;5;15:ex=38;5;34:*.tar=38;5;9:*.tgz=38;5;9:*.arc=38;5;9:*.arj=38;5;9:*.taz=38;5;9:*.lha=38;5;9:*.lzh=38;5;9:*.lzma=38;5;9:*.tlz=38;5;9:*.txz=38;5;9:*.tzo=38;5;9:*.t7z=38;5;9:*.zip=38;5;9:*.z=38;5;9:*.Z=38;5;9:*.dz=38;5;9:*.gz=38;5;9:*.lrz=38;5;9:*.lz=38;5;9:*.lzo=38;5;9:*.xz=38;5;9:*.bz2=38;5;9:*.bz=38;5;9:*.tbz=38;5;9:*.tbz2=38;5;9:*.tz=38;5;9:*.deb=38;5;9:*.rpm=38;5;9:*.jar=38;5;9:*.war=38;5;9:*.ear=38;5;9:*.sar=38;5;9:*.rar=38;5;9:*.alz=38;5;9:*.ace=38;5;9:*.zoo=38;5;9:*.cpio=38;5;9:*.7z=38;5;9:*.rz=38;5;9:*.cab=38;5;9:*.jpg=38;5;13:*.jpeg=38;5;13:*.gif=38;5;13:*.bmp=38;5;13:*.pbm=38;5;13:*.pgm=38;5;13:*.ppm=38;5;13:*.tga=38;5;13:*.xbm=38;5;13:*.xpm=38;5;13:*.tif=38;5;13:*.tiff=38;5;13:*.png=38;5;13:*.svg=38;5;13:*.svgz=38;5;13:*.mng=38;5;13:*.pcx=38;5;13:*.mov=38;5;13:*.mpg=38;5;13:*.mpeg=38;5;13:*.m2v=38;5;13:*.mkv=38;5;13:*.ogm=38;5;13:*.mp4=38;5;13:*.m4v=38;5;13:*.mp4v=38;5;13:*.vob=38;5;13:*.qt=38;5;13:*.nuv=38;5;13:*.wmv=38;5;13:*.asf=38;5;13:*.rm=38;5;13:*.rmvb=38;5;13:*.flc=38;5;13:*.avi=38;5;13:*.fli=38;5;13:*.flv=38;5;13:*.gl=38;5;13:*.dl=38;5;13:*.xcf=38;5;13:*.xwd=38;5;13:*.yuv=38;5;13:*.cgm=38;5;13:*.emf=38;5;13:*.axv=38;5;13:*.anx=38;5;13:*.ogv=38;5;13:*.ogx=38;5;13:*.aac=38;5;45:*.au=38;5;45:*.flac=38;5;45:*.mid=38;5;45:*.midi=38;5;45:*.mka=38;5;45:*.mp3=38;5;45:*.mpc=38;5;45:*.ogg=38;5;45:*.ra=38;5;45:*.wav=38;5;45:*.axa=38;5;45:*.oga=38;5;45:*.spx=38;5;45:*.xspf=38;5;45:', 'GEM_HOME': '/home/gammasq/.rvm/gems/ruby-2.0.0-p247@railstutorial_rails_4_0', 'XDG_SEAT': 'seat0'}
Unpacking ./.tox/dist/storycheck-0.1.zip
  Running setup.py egg_info for package from file:///home/gammasq/Documents/projects/storycheck/.tox/dist/storycheck-0.1.zip
    
Installing collected packages: storycheck
  Found existing installation: storycheck 0.1
    Uninstalling storycheck:
      Successfully uninstalled storycheck
  Running setup.py install for storycheck
    
      File "/home/gammasq/Documents/projects/storycheck/.tox/py27/lib/python2.7/site-packages/engine/interactables.py", line 5
        self.reactions={}}
                         ^
    SyntaxError: invalid syntax
    
Successfully installed storycheck
Cleaning up...
